# agent-workshop-participant

./: .gitignore  AGENTS.md  Dockerfile  PLAN.md  README.md  app.py  docker-compose.yml  env_sample  pyproject.toml  run_checkpoint_evals.py
data/: cancellation_policy.txt  return_policy.txt  shipping_and_delivery.md
evaluation/: Dockerfile  checkpoints.yaml
evaluation/backend/: evaluator.py  main.py  mock_agent.py  models.py  requirements.txt
evaluation/frontend/: index.html  package-lock.json  package.json
evaluation/frontend/src/: App.tsx  api.ts  index.css  types.ts
platform/: Dockerfile
platform/backend/: main.py
platform/frontend/: index.html  package.json  tsconfig.tsbuildinfo  vite.config.ts
platform/frontend/src/: App.tsx  api.ts  index.css  types.ts
scripts/: ingest.py
src/: config.py
src/agents/: chat.py
src/db/: __init__.py
src/embedding/: __init__.py  base.py  openai.py
src/graphs/chat/: builder.py  nodes.py  prompts.py  states.py
src/llm/: __init__.py  base.py  openai.py
src/mcp/: server.py
src/tools/: __init__.py
src/tools/cart/: __init__.py  read.py  write.py
src/tools/coupons/: __init__.py  read.py
src/tools/logistics/: __init__.py  read.py  write.py
src/tools/mcp/: __init__.py  tools.py
src/tools/notifications/: __init__.py  read.py
src/tools/orders/: __init__.py  read.py  write.py
src/tools/payments/: __init__.py  read.py
src/tools/products/: __init__.py  (+1 more)
src/vector_db/: __init__.py  base.py  weaviate.py
tests/: test_chat_intent.py  test_db_tools.py  test_full_chat.py  test_rag.py  test_web_search.py
(+24 files in other folders)
